Documentation added (work in progress)

--- a/README
+++ b/README
@@ -1,7 +1,8 @@
-Please read "Docs/Documentation.pdf" to learn how to use this script. **COMING SOON**
+Please read "Docs/Documentation.pdf" to learn how to use this script. ** IN PROGRESS **
+
+If you want to try a WebGL demo of this script: http://www.roy-bodereau.fr/hudradar_demo_en.html
 
 TODO List :
 //- Custom inspector Ctr-Z support (Will be looked at later : seems serialized properties are the only way to go)
 - Script optimization settings
-- Documentation
-//- Demo scene
+/- Documentation ** IN PROGRESS **
