Documentation.pdf updated: Parameters section completed (Scripting section TODO)

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-Please read "Docs/Documentation.pdf" to learn how to use this script. ** IN PROGRESS **
+Please read Docs\Documentation.pdf to learn how to use this script. ** IN PROGRESS **
+(can be found here : https://github.com/Kardux/UIRadar/blob/master/Docs/Documentation.pdf)
 
 If you want to try a WebGL demo of this script: http://www.roy-bodereau.fr/hudradar_demo_en.html
 
