Documentaion.pdf ended / Project paused.

--- a/README
+++ b/README
@@ -1,9 +1,11 @@
-Please read Docs\Documentation.pdf to learn how to use this script. ** IN PROGRESS **
-(can be found here : https://github.com/Kardux/UIRadar/blob/master/Docs/Documentation.pdf)
+** PROJECT PAUSED **
+
+Please read Docs\Documentation.pdf to learn how to use this script.
+(can be found here: https://github.com/Kardux/UIRadar/blob/master/Docs/Documentation.pdf)
 
 If you want to try a WebGL demo of this script: http://www.roy-bodereau.fr/hudradar_demo_en.html
 
-TODO List :
-//- Custom inspector Ctr-Z support (Will be looked at later : seems serialized properties are the only way to go)
+TODO List:
+//- Custom inspector Ctr-Z support (Will be looked at later: seems serialized properties are the only way to go)
+//- Documentation
 - Script optimization settings
-/- Documentation ** IN PROGRESS **
